# FileMicroservice

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: fastapi.yml
src/: exceptions.py.isorted  main.py
src/core/: config.py  consumer.py  health.py  kafka_consumer.py  minio.py
src/schemas/: file_schema.py
src/services/: file_service.py
